getting it ready!

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -79,7 +79,7 @@ a:hover, a:focus {
 
 .btn.btn-g {
 	background: #69BBAC;
-	border: 1px solid #b2b2b2;
+	border: 1px solid #69BBAC;
 	color: #FFF;
 }
 
